--- a/src/Samples/SubModelSeq/Counter.xaml
+++ b/src/Samples/SubModelSeq/Counter.xaml
@@ -1,17 +1,46 @@
-﻿<UserControl x:Class="Elmish.WPF.Samples.SubModelSeq.Counter"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vm="clr-namespace:Elmish.WPF.Samples.SubModelSeq;assembly=SubModelSeq.Core"
-             mc:Ignorable="d"
-             d:DataContext="{x:Static vm:Program.counterDesignVm}">
-  <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
-    <TextBlock Text="{Binding CounterValue, StringFormat='Counter value: {0}'}" Width="110" Margin="0,5,10,5" />
-    <Button Command="{Binding Decrement}" Content="-" Margin="0,5,10,5" Width="30" />
-    <Button Command="{Binding Increment}" Content="+" Margin="0,5,10,5" Width="30" />
-    <Button Command="{Binding Reset}" Content="Reset" Margin="0,5,10,5" Width="50" />
-    <TextBlock Text="{Binding StepSize, StringFormat='Step size: {0}'}" Width="70" Margin="0,5,10,5" />
-    <Slider Value="{Binding StepSize}" TickFrequency="1" Maximum="10" Minimum="1" IsSnapToTickEnabled="True" Width="100" Margin="0,5,10,5" />
-  </StackPanel>
+﻿<UserControl
+    x:Class="Elmish.WPF.Samples.SubModelSeq.Counter"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:Elmish.WPF.Samples.SubModelSeq;assembly=SubModelSeq.Core"
+    d:DataContext="{x:Static vm:Program.counterDesignVm}"
+    mc:Ignorable="d">
+    <StackPanel
+        HorizontalAlignment="Center"
+        VerticalAlignment="Top"
+        Orientation="Horizontal">
+        <TextBlock
+            Width="110"
+            Margin="0,5,10,5"
+            Text="{Binding CounterValue, StringFormat='Counter value: {0}'}" />
+        <Button
+            Width="30"
+            Margin="0,5,10,5"
+            Command="{Binding Decrement}"
+            Content="-" />
+        <Button
+            Width="30"
+            Margin="0,5,10,5"
+            Command="{Binding Increment}"
+            Content="+" />
+        <Button
+            Width="50"
+            Margin="0,5,10,5"
+            Command="{Binding Reset}"
+            Content="Reset" />
+        <TextBlock
+            Width="70"
+            Margin="0,5,10,5"
+            Text="{Binding StepSize, StringFormat='Step size: {0}'}" />
+        <Slider
+            Width="100"
+            Margin="0,5,10,5"
+            IsSnapToTickEnabled="True"
+            Maximum="10"
+            Minimum="1"
+            TickFrequency="1"
+            Value="{Binding StepSize}" />
+    </StackPanel>
 </UserControl>
