--- a/src/Samples/SubModelSeq/MainWindow.xaml
+++ b/src/Samples/SubModelSeq/MainWindow.xaml
@@ -1,44 +1,92 @@
-﻿<Window x:Class="Elmish.WPF.Samples.SubModelSeq.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Elmish.WPF.Samples.SubModelSeq"
-        xmlns:vm="clr-namespace:Elmish.WPF.Samples.SubModelSeq;assembly=SubModelSeq.Core"
-        Title="SubModelSeq"
-        Height="800"
-        Width="1100"
-        WindowStartupLocation="CenterScreen"
-        mc:Ignorable="d"
-        d:DataContext="{x:Static vm:Program.mainDesignVm}">
-  <Grid Margin="0,20,0,10">
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto"/>
-      <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
-    <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
-      <Button Command="{Binding AddCounter}" Content="Add counter" Width="150" Margin="10,0,10,20" />
-      <Button Command="{Binding ToggleGlobalState}" Content="Toggle global state" Width="150" Margin="10,0,10,20" />
-    </StackPanel>
-    <TreeView Grid.Row="1" ItemsSource="{Binding Counters}">
-      <TreeView.ItemContainerStyle>
-        <Style TargetType="{x:Type TreeViewItem}">
-          <Setter Property="IsExpanded" Value="True"/>
-        </Style>
-      </TreeView.ItemContainerStyle>
-      <TreeView.ItemTemplate>
-        <HierarchicalDataTemplate ItemsSource="{Binding ChildCounters}">
-          <StackPanel Orientation="Horizontal">
-            <TextBlock Text="{Binding CounterIdText}" Width="250" Margin="10,5,10,5" />
-            <local:Counter/>
-            <Button Command="{Binding AddChild}" Content="Add child" Margin="0,5,10,5" />
-            <Button Command="{Binding Remove}" Content="×" Margin="0,5,10,5" Width="20" />
-            <Button Command="{Binding MoveUp}" Content="↑" Margin="0,5,10,5" Width="20" />
-            <Button Command="{Binding MoveDown}" Content="↓" Margin="0,5,10,5" Width="20"/>
-            <TextBlock Text="{Binding GlobalState, StringFormat='Global state: {0}'}" Margin="10,5,10,5" />
-          </StackPanel>
-        </HierarchicalDataTemplate>
-      </TreeView.ItemTemplate>
-    </TreeView>
-  </Grid>
+﻿<Window
+    x:Class="Elmish.WPF.Samples.SubModelSeq.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:local="clr-namespace:Elmish.WPF.Samples.SubModelSeq"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:Elmish.WPF.Samples.SubModelSeq;assembly=SubModelSeq.Core"
+    Title="SubModelSeq"
+    Width="1100"
+    Height="800"
+    d:DataContext="{x:Static vm:Program.mainDesignVm}"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
+    <Window.Resources>
+        <ContextMenu x:Key="contextMenu">
+            <MenuItem
+                x:Name="contextSelectAll"
+                Command="{Binding ContextSelectAll}"
+                Header="Select All" />
+            <MenuItem
+                x:Name="contextClearAll"
+                Command="{Binding ContextClearAll}"
+                Header="Clear All" />
+        </ContextMenu>
+    </Window.Resources>
+    <Grid Margin="0,20,0,10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackPanel
+            Grid.Row="0"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal">
+            <Button
+                Width="150"
+                Margin="10,0,10,20"
+                Command="{Binding AddCounter}"
+                Content="Add counter" />
+            <Button
+                Width="150"
+                Margin="10,0,10,20"
+                Command="{Binding ToggleGlobalState}"
+                Content="Toggle global state" />
+        </StackPanel>
+        <TreeView Grid.Row="1" ItemsSource="{Binding Counters}">
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="{x:Type TreeViewItem}">
+                    <Setter Property="IsExpanded" Value="True" />
+                </Style>
+            </TreeView.ItemContainerStyle>
+            <TreeView.ItemTemplate>
+                <HierarchicalDataTemplate ItemsSource="{Binding ChildCounters}">
+                    <StackPanel Orientation="Horizontal">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="MouseRightButtonUp">
+                                <i:InvokeCommandAction Command="{Binding RightClick}" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                        <TextBlock
+                            Width="250"
+                            Margin="10,5,10,5"
+                            Text="{Binding CounterIdText}" />
+                        <local:Counter />
+                        <Button
+                            Margin="0,5,10,5"
+                            Command="{Binding AddChild}"
+                            Content="Add child" />
+                        <Button
+                            Width="20"
+                            Margin="0,5,10,5"
+                            Command="{Binding Remove}"
+                            Content="×" />
+                        <Button
+                            Width="20"
+                            Margin="0,5,10,5"
+                            Command="{Binding MoveUp}"
+                            Content="↑" />
+                        <Button
+                            Width="20"
+                            Margin="0,5,10,5"
+                            Command="{Binding MoveDown}"
+                            Content="↓" />
+                        <TextBlock Margin="10,5,10,5" Text="{Binding GlobalState, StringFormat='Global state: {0}'}" />
+                    </StackPanel>
+                </HierarchicalDataTemplate>
+            </TreeView.ItemTemplate>
+        </TreeView>
+    </Grid>
 </Window>
